--- a/docs/content.yml
+++ b/docs/content.yml
@@ -5,9 +5,9 @@ content:
     logo: https://avatars2.githubusercontent.com/u/16935616?s=200&v=4
     items:
       kafka:
-        title: DRIVER+ test-bed core
+        title: DRIVER+ Test-bed core
         description: >
-          The test-bed allows you to trial and test different solutions in the
+          The Test-bed allows you to trial and test different solutions in the
           crisis-management domain. It consists of a complete setup of Apache
           Kafka, and some additional tooling, such as the REST interface,
           schema registry and UI, and topics UI.
@@ -23,13 +23,43 @@ content:
           - kafka_rest
         parameters:
           ZOOKEEPER_CLIENT_PORT: 3500
-          KAFKA_HOST_NAME: 'localhost'
+          KAFKA_HOST_NAME: localhost
           KAFKA_BROKER_PORT: 3501
           KAFKA_TOPICS_PORT: 3600
           KAFKA_TOPICS_UI: 3601
           SCHEMA_REGISTRY_PORT: 3502
           SCHEMA_REGISTRY_UI_PORT: 3602
           KAFKA_REST_PORT: 8082
+      timeservice:
+        title: DRIVER+ Time Service
+        description: >
+          The DRIVER+ Time service offers a shared clock to simulators and solutions. It can be used to
+          pause or fast forward time in order to control the sequence of events.
+        logo: https://avatars2.githubusercontent.com/u/16935616?s=200&v=4
+        website: https://github.com/DRIVER-EU/test-bed-time-service
+        depends_on:
+          - kafka
+        services:
+          - time_service
+        parameters:
+          TIME_SERVICE_PORT: 8100
+      lfs:
+        title: DRIVER+ Large file service
+        description: >
+          Typical messages should not exceed 1Mb, and are preferably much smaller.
+          In case you wish to share larger messages, or multimedia content, you should
+          instead use this large file service. It allows you to upload messages, either
+          privately or publicly, and share the returned URL as a
+          [large data update](https://github.com/DRIVER-EU/avro-schemas/tree/master/core/large-data)
+          message.
+        logo: https://avatars2.githubusercontent.com/u/16935616?s=200&v=4
+        website: http://driver-project.eu
+        depends_on:
+          - kafka
+        services:
+          - large_file_service
+        parameters:
+          LARGE_FILE_SERVICE_PORT: 9090
       connect:
         title: Kafka Connect
         description: >
@@ -51,7 +81,7 @@ content:
       scenario_manager:
         title: Scenario Manager
         description: >
-          The Scenario Manager allows you to start/stop/pause different scenario's. In a scenario, you can perform
+          The Scenario Manager allows you to start/stop/pause different scenarios. In a scenario, you can perform
           simple actions, like sending a message, but it also allows for more complex branching and starting or stopping
           sub-scenarios.
 
@@ -197,9 +227,10 @@ content:
         depends_on:
           - kafka
         services:
+          - gateway_converter
           - cscop
         parameters:
-          CSCOP_PORT: 8000
+          CSCOP_PORT: 8003
       gmv:
         title: GMV COP tool [COMMERCIAL]
         description: >
@@ -227,102 +258,164 @@ content:
 
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper
+    image: confluentinc/cp-zookeeper:5.0.0
     hostname: zookeeper
     ports:
-      - "$ZOOKEEPER_CLIENT_PORT:3500"
+      - '$ZOOKEEPER_CLIENT_PORT:3500'
     environment:
       ZOOKEEPER_CLIENT_PORT: $ZOOKEEPER_CLIENT_PORT
       ZOOKEEPER_TICK_TIME: 2000
 
   broker:
-    image: confluentinc/cp-kafka
+    image: confluentinc/cp-kafka:5.0.0
     hostname: broker
     depends_on:
       - zookeeper
     ports:
-      - "$KAFKA_BROKER_PORT:3502"
+      - '$KAFKA_BROKER_PORT:3501'
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
-      KAFKA_ADVERTISED_LISTENERS: 'EXTERNAL://$KAFKA_HOST_NAME:$KAFKA_BROKER_PORT,PLAINTEXT://broker:9092'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT'
-      KAFKA_LISTENERS: 'EXTERNAL://0.0.0.0:$KAFKA_BROKER_PORT,PLAINTEXT://0.0.0.0:9092'
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:$ZOOKEEPER_CLIENT_PORT
+      KAFKA_ADVERTISED_LISTENERS: EXTERNAL://$KAFKA_HOST_NAME:$KAFKA_BROKER_PORT,PLAINTEXT://broker:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_LISTENERS: EXTERNAL://0.0.0.0:$KAFKA_BROKER_PORT,PLAINTEXT://0.0.0.0:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
       KAFKA_MESSAGE_MAX_BYTES: 100000000
       KAFKA_REPLICA_FETCH_MAX_BYTES: 100000000
-
   schema_registry:
-    image: confluentinc/cp-schema-registry
+    image: confluentinc/cp-schema-registry:5.0.0
     hostname: schema_registry
     depends_on:
       - zookeeper
       - broker
     ports:
-      - "$SCHEMA_REGISTRY_PORT:3502"
+      - '$SCHEMA_REGISTRY_PORT:3502'
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema_registry
-      SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:$SCHEMA_REGISTRY_PORT'
-      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:$SCHEMA_REGISTRY_PORT
+      SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: zookeeper:$ZOOKEEPER_CLIENT_PORT
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://broker:9092
 
   kafka_rest:
-    image: confluentinc/cp-kafka-rest
+    image: confluentinc/cp-kafka-rest:5.0.0
     hostname: kafka_rest
     depends_on:
       - zookeeper
       - schema_registry
       - broker
     ports:
-      - "$KAFKA_REST_PORT:8082"
+      - '$KAFKA_REST_PORT:8082'
     environment:
       KAFKA_REST_HOST_NAME: kafka_rest
-      KAFKA_REST_BOOTSTRAP_SERVERS: 'PLAINTEXT://broker:9092'
-      KAFKA_REST_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
-      KAFKA_REST_LISTENERS: 'http://0.0.0.0:$KAFKA_REST_PORT'
-      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
+      KAFKA_REST_BOOTSTRAP_SERVERS: PLAINTEXT://broker:9092
+      KAFKA_REST_ZOOKEEPER_CONNECT: zookeeper:$ZOOKEEPER_CLIENT_PORT
+      KAFKA_REST_LISTENERS: http://0.0.0.0:$KAFKA_REST_PORT
+      KAFKA_REST_SCHEMA_REGISTRY_URL: http://schema_registry:$SCHEMA_REGISTRY_PORT
       KAFKA_CONSUMER_REQUEST_TIMEOUT_MS: 30000
-      KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS: 'GET,POST,PUT,DELETE,OPTIONS'
+      KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS: GET,POST,PUT,DELETE,OPTIONS
       KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGIN: '*'
 
   kafka_topics_ui:
-    image: landoop/kafka-topics-ui
+    image: landoop/kafka-topics-ui:0.9.4
     hostname: kafka_topics_ui
     depends_on:
       - kafka_rest
     ports:
-      - "$KAFKA_TOPICS_UI:8000"
+      - '$KAFKA_TOPICS_UI:8000'
     environment:
-      KAFKA_REST_PROXY_URL: 'http://kafka_rest:8082'
+      KAFKA_REST_PROXY_URL: http://kafka_rest:$KAFKA_REST_PORT
       PROXY: 'true'
+      MAX_BYTES: 1000000
 
   kafka_schema_registry_ui:
-    image: landoop/schema-registry-ui
+    image: landoop/schema-registry-ui:0.9.5
     hostname: kafka_schema_registry_ui
     depends_on:
       - schema_registry
     ports:
-      - "$SCHEMA_REGISTRY_UI_PORT:8000"
+      - '$SCHEMA_REGISTRY_UI_PORT:8000'
     environment:
-      SCHEMAREGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
+      SCHEMAREGISTRY_URL: http://schema_registry:$SCHEMA_REGISTRY_PORT
       PROXY: 'true'
 
+  postgres:
+    image: postgres:9.6
+    hostname: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: TRIAL_ADMIN
+    volumes:
+       - postgres-data:/var/lib/postgresql/data
+    restart: unless-stopped
+    
+  admintool:
+    image: drivereu/test-bed-admin:latest
+    depends_on:
+      - postgres
+      - broker
+      - schema_registry
+    ports:
+      - '$ADMIN_TOOL_PORT:8090'
+    volumes:
+      - ./admintool-config/gateways.json:/opt/application/config/gateways.json
+      - ./admintool-config/solutions.json:/opt/application/config/solutions.json
+      - ./admintool-config/topics.json:/opt/application/config/topics.json
+      - ./admintool-config/standards.json:/opt/application/config/standards.json
+  
+  pgadmin:
+    image: fenglc/pgadmin4
+    depends_on:
+      - postgres
+    ports:
+        - '$PG_ADMIN_PORT:5050'
+    restart: unless-stopped
+  
+  time_service:
+    image: drivereu/test-bed-time-service:latest
+    depends_on:
+      - broker
+      - schema_registry
+    ports:
+      - '$TIME_SERVICE_PORT:8100'
+    environment:
+      KAFKA_BROKER_URL: broker:9092
+      SCHEMA_REGISTRY_URL: http://schema_registry:$SCHEMA_REGISTRY_PORT
+      AUTO_REGISTER_SCHEMAS: 'true'
+      
+  large_file_service:
+    image: drivereu/large-file-service:latest
+    ports:
+      - '$LARGE_FILE_SERVICE_PORT:9090'
+    environment:
+      HOST: localhost
+      PORT: $LARGE_FILE_SERVICE_PORT
+
+  gateway_converter:
+    image: phameete/gateway-xvr-geojson:1.0.8
+    depends_on:
+      - schema_registry
+      - broker
+    volumes:
+      - ./config/gateway-config:/opt/application/config
+
   connect:
-    image: confluentinc/cp-kafka-connect
+    image: confluentinc/cp-kafka-connect:5.0.0
     hostname: connect
     depends_on:
       - zookeeper
       - broker
       - schema_registry
     ports:
-      - "$KAFKA_CONNECT_PORT:3504"
+      - '$KAFKA_CONNECT_PORT:3504'
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: 'broker:9092'
-      CONNECT_ZOOKEEPER_CONNECT: 'zookeeper:$ZOOKEEPER_CLIENT_PORT'
+      CONNECT_BOOTSTRAP_SERVERS: broker:9092
+      CONNECT_ZOOKEEPER_CONNECT: zookeeper:$ZOOKEEPER_CLIENT_PORT
       CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema_registry:$SCHEMA_REGISTRY_PORT
       CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema_registry:$SCHEMA_REGISTRY_PORT'
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema_registry:$SCHEMA_REGISTRY_PORT
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
       CONNECT_REST_PORT: $KAFKA_CONNECT_PORT
       CONNECT_GROUP_ID: compose-connect-group
@@ -342,20 +435,22 @@ services:
     depends_on:
       - connect
     ports:
-      - "$KAFKA_CONNECT_UI_PORT:8000"
+      - '$KAFKA_CONNECT_UI_PORT:8000'
     environment:
-      CONNECT_URL: 'http://connect:$KAFKA_CONNECT_PORT'
+      CONNECT_URL: http://connect:$KAFKA_CONNECT_PORT
       PROXY: 'true'
 
   cscop:
-    build: https://github.com/DRIVER-EU/csCOP.git#test-bed:website
+    image: rinzeb/cscop
     hostname: cscop
     depends_on:
       - schema_registry
       - zookeeper
       - broker
+      - gateway_converter
+    command: ['/src/scripts/wait-for.sh', 'schema_registry:3502', '-t', '120', '--', 'node', '/src/server.js']
     ports:
-      - "$CSCOP_PORT:8003"
+      - '$CSCOP_PORT:8003'
     volumes:
       - ./config/cscop/:/src/config/
     environment:
@@ -365,7 +460,7 @@ services:
     build: https://github.com/DRIVER-EU/test-bed-mbtiles-service.git#0.0.2
     hostname: mbtilesserver
     ports:
-      - "$MBTILES_PORT:3344"
+      - '$MBTILES_PORT:3344'
     volumes:
       - ./mbtiles/:/src/mbtiles/
     environment:
@@ -375,8 +470,8 @@ services:
     build: https://github.com/DRIVER-EU/test-bed-wms-service.git#v0.0.2
     hostname: wmsserver
     ports:
-      - "$WMS_PORT:3355"
+      - '$WMS_PORT:3355'
     environment:
       WMS_PORT: $WMS_PORT
-      GDAL_DATA: '/usr/share/gdal/2.2'
-      PROJ_LIB: './src/nad'
+      GDAL_DATA: /usr/share/gdal/2.2
+      PROJ_LIB: ./src/nad
